# Calculation_alpha-particle_trajectory

./: CMakeLists.txt  README.md
colculatinf_treck/: CMakeLists.txt
colculatinf_treck/tests/: tests.cpp
colculating_treck/: CMakeLists.txt
colculating_treck/tests/: tests.cpp
